# 230-wi19-web

./: Makefile  README.md  TODO.md  assignments.md  calendar.md  contact.md  grades.md  index.md  jhala-course-page.cabal  lectures.md  links.md  site.hs  stack.yaml
notes/: 00-Intro.lhs  02-Sets.lhs  04-EquationalProofs.lhs  05-Induction-Lists.lhs  05-ProofCombinators.lhs  08-Induction-Arith.lhs  09-Evidence-Even.lhs  11-Evidence-Paths.lhs  12-Bigstep.lhs  Lec_01_14.lhs  Lec_01_16.lhs  Lec_01_18.lhs  Lec_01_29.lhs  Lec_01_30.lhs  Lec_02_01.lhs  Lec_02_06.lhs  Lec_02_13.lhs  Lec_02_20.lhs  Lec_02_22.lhs  Lec_02_25.lhs  Lec_03_01.lhs  Lec_03_06.lhs  Lec_03_08.lhs  Lec_03_11.lhs  Lec_03_13.lhs  Lec_03_15.lhs  Lec_1_25.lhs  Lec_3_11.lhs
src/Week1/: Lec_1_11.lhs  Lec_1_9.lhs  Lists.lhs
src/Week10/: Axiomatic.hs  Makefile  Verifier.hs
src/Week2/: Bug.hs  Ch02.hs  Lec_1_14.lhs  Lec_1_16.lhs  Lec_1_18.lhs  Lec_1_25.lhs  ProgramsAsProofs.hs  ProofCombinators.hs  ReasoningAboutFunctions.lhs
src/Week3/: Expressions.hs  Lec_1_28.lhs  Lec_1_30.hs  Lists.hs  ReasoningAboutFunctions.lhs
src/Week4/: Even.hs  Expressions.hs  Inductive.hs  Lec_2_4.hs  Lec_2_6.hs  Lec_2_8.hs  Lists.hs  State.hs
src/Week5/: Expressions.hs  Imp.hs  Lec_2_11.hs  Lec_2_13.hs  Lec_2_13_Termination.hs  State.hs
src/Week6/: BigStep.hs  Expressions.hs  FloydHoare.hs  Imp.hs  Lec_2_20.hs  Lec_2_22.hs  SmallStep.hs  Verifier.hs
src/Week8/: Lec_2_25.hs  Lec_2_27.hs  Lec_3_1.hs  Makefile  SmallStep.hs
src/Week9/: FloydHoare.hs  Lec_03_04.lhs  Lec_3_4.hs  (+3 more)
templates/: footer.html  head.html  nav.html
(+3 files in other folders)
