name:                jhala-course-page
version:             0.1.0.0
synopsis:            Home page for classes taught by Ranjit Jhala at UC San Diego
homepage:            https://github.com/ucsd-progsys/cse130
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
copyright:           Ranjit Jhala
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable homepage
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base,
                       hakyll,
                       pandoc
